Adjust z-ndex of hover menu to avoid overlap with top app bar.

--- a/src/components/ElementCard.scss
+++ b/src/components/ElementCard.scss
@@ -17,7 +17,7 @@
   }
   .hover-button {
     position: absolute;
-    z-index: 4;
+    z-index: 3;
     width: 100%;
     height: 64px;
     &::before {
