--- a/src/components/ElementImage.scss
+++ b/src/components/ElementImage.scss
@@ -30,7 +30,7 @@
         position: absolute;
         width: 100%;
         height: 64px;
-        z-index: 4;
+        z-index: 3;
         display: flex;
         justify-content: flex-end;
         align-items: center;
